pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong
  namespace: log-ping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pong
  template:
    metadata:
      labels:
        app: pong
    spec:
      volumes:
        - name: kube-course-volume
          persistentVolumeClaim:
            claimName: kube-course-claim
      containers:
        - name: pong
          image: toukop/pong:latest
          volumeMounts:
            - name: kube-course-volume
              mountPath: /usr/src/app/files
