pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pong-svc
  namespace: log-ping
spec:
  type: NodePort
  selector:
    app: pong
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3000
